include/transcribe.h


typedef enum {
    TRANSCRIBE_OK                         = 0,
    TRANSCRIBE_ERR_INVALID_ARG            = 1,
    TRANSCRIBE_ERR_NOT_IMPLEMENTED        = 2,
    TRANSCRIBE_ERR_FILE_NOT_FOUND         = 3,
    TRANSCRIBE_ERR_GGUF                   = 4,
    TRANSCRIBE_ERR_UNSUPPORTED_ARCH       = 5,
    TRANSCRIBE_ERR_UNSUPPORTED_VARIANT    = 6,
    TRANSCRIBE_ERR_OOM                    = 7,
    TRANSCRIBE_ERR_BACKEND                = 8,
    TRANSCRIBE_ERR_SAMPLE_RATE            = 9,
    TRANSCRIBE_ERR_UNSUPPORTED_LANGUAGE   = 10,
    TRANSCRIBE_ERR_UNSUPPORTED_TASK       = 11,
    TRANSCRIBE_ERR_UNSUPPORTED_TIMESTAMPS = 12,
    TRANSCRIBE_ERR_ABORTED                = 13,
    TRANSCRIBE_ERR_BAD_STRUCT_SIZE        = 14,
    TRANSCRIBE_ERR_UNSUPPORTED_PNC        = 15,
    TRANSCRIBE_ERR_UNSUPPORTED_ITN        = 16,
    TRANSCRIBE_ERR_INPUT_TOO_LONG         = 17,
    TRANSCRIBE_ERR_OUTPUT_TRUNCATED       = 18,
} transcribe_status;
typedef enum {
    TRANSCRIBE_TASK_TRANSCRIBE = 0,
    TRANSCRIBE_TASK_TRANSLATE  = 1,
} transcribe_task;
typedef enum {
    TRANSCRIBE_TIMESTAMPS_NONE    = 0,
    TRANSCRIBE_TIMESTAMPS_AUTO    = 1,
    TRANSCRIBE_TIMESTAMPS_SEGMENT = 2,
    TRANSCRIBE_TIMESTAMPS_WORD    = 3,
    TRANSCRIBE_TIMESTAMPS_TOKEN   = 4,
} transcribe_timestamp_kind;
enum transcribe_pnc_mode {
    TRANSCRIBE_PNC_MODE_DEFAULT = 0,
    TRANSCRIBE_PNC_MODE_OFF     = 1,
    TRANSCRIBE_PNC_MODE_ON      = 2,
};
enum transcribe_itn_mode {
    TRANSCRIBE_ITN_MODE_DEFAULT = 0,
    TRANSCRIBE_ITN_MODE_OFF     = 1,
    TRANSCRIBE_ITN_MODE_ON      = 2,
};
struct transcribe_model;
struct transcribe_session;
struct transcribe_ext {
    uint64_t size;
    uint32_t kind;
};
struct transcribe_run_params {
    uint64_t struct_size;
    transcribe_task               task;
    transcribe_timestamp_kind     timestamps;
    enum transcribe_pnc_mode      pnc;
    enum transcribe_itn_mode      itn;
    const char *                  language;
    const char *                  target_language;
    bool                          keep_special_tags;
    const struct transcribe_ext * family;
    int32_t spec_k_drafts;
    const char * context;
};
TRANSCRIBE_API void transcribe_close(struct transcribe_session * session);
TRANSCRIBE_API const struct transcribe_model * transcribe_get_model(const struct transcribe_session * session);
TRANSCRIBE_API transcribe_status transcribe_run(struct transcribe_session *          session,
                                                const float *                        pcm,
                                                int                                  n_samples,
                                                const struct transcribe_run_params * params);
TRANSCRIBE_API transcribe_status transcribe_run_batch(struct transcribe_session *          session,
                                                      const float * const *                pcm,
                                                      const int *                          n_samples,
                                                      int                                  n,
                                                      const struct transcribe_run_params * params);
typedef bool (*transcribe_abort_callback)(void * user_data);
TRANSCRIBE_API void transcribe_set_abort_callback(struct transcribe_session * session,
                                                  transcribe_abort_callback   cb,
                                                  void *                      user_data);
TRANSCRIBE_API bool transcribe_was_aborted(const struct transcribe_session * session);
TRANSCRIBE_API bool transcribe_was_truncated(const struct transcribe_session * session);
struct transcribe_session_limits {
    uint64_t struct_size;
    int32_t  effective_n_ctx;
    int64_t  effective_max_audio_ms;
    int64_t  max_kv_bytes;
};
TRANSCRIBE_API void transcribe_session_limits_init(struct transcribe_session_limits * out);
TRANSCRIBE_API transcribe_status transcribe_session_get_limits(const struct transcribe_session *  session,
                                                               struct transcribe_session_limits * out);
enum transcribe_stream_state {
    TRANSCRIBE_STREAM_IDLE     = 0,
    TRANSCRIBE_STREAM_ACTIVE   = 1,
    TRANSCRIBE_STREAM_FINISHED = 2,
    TRANSCRIBE_STREAM_FAILED   = 3,
};
typedef enum {
    TRANSCRIBE_STREAM_COMMIT_AUTO          = 0,
    TRANSCRIBE_STREAM_COMMIT_ON_FINALIZE   = 1,
    TRANSCRIBE_STREAM_COMMIT_STABLE_PREFIX = 2,
} transcribe_stream_commit_policy;
struct transcribe_stream_params {
    uint64_t                        struct_size;
    const struct transcribe_ext *   family;
    transcribe_stream_commit_policy commit_policy;
    uint32_t                        stable_prefix_agreement_n;
};
TRANSCRIBE_API void transcribe_stream_params_init(struct transcribe_stream_params * params);
struct transcribe_stream_update {
    uint64_t struct_size;
    bool     result_changed;
    bool     is_final;
    int32_t  revision;
    int64_t  input_received_ms;
    int64_t  audio_committed_ms;
    int64_t  buffered_ms;
    bool     committed_changed;
    bool     tentative_changed;
};
TRANSCRIBE_API void transcribe_stream_update_init(struct transcribe_stream_update * out);
struct transcribe_stream_text {
    uint64_t     struct_size;
    const char * full_text;
    uint64_t     full_text_bytes;
    const char * committed_text;
    uint64_t     committed_text_bytes;
    const char * tentative_text;
    uint64_t     tentative_text_bytes;
    uint64_t     raw_tentative_start_bytes;
};
TRANSCRIBE_API void transcribe_stream_text_init(struct transcribe_stream_text * out);
TRANSCRIBE_API transcribe_status transcribe_stream_get_text(const struct transcribe_session * session,
                                                            struct transcribe_stream_text *   out);
TRANSCRIBE_API transcribe_status transcribe_stream_begin(struct transcribe_session *             session,
                                                         const struct transcribe_run_params *    run_params,
                                                         const struct transcribe_stream_params * stream_params);
TRANSCRIBE_API transcribe_status transcribe_stream_feed(struct transcribe_session *       session,
                                                        const float *                     pcm,
                                                        int                               n_samples,
                                                        struct transcribe_stream_update * update);
TRANSCRIBE_API transcribe_status transcribe_stream_finalize(struct transcribe_session *       session,
                                                            struct transcribe_stream_update * update);
TRANSCRIBE_API void transcribe_stream_reset(struct transcribe_session * session);
TRANSCRIBE_API enum transcribe_stream_state transcribe_stream_get_state(const struct transcribe_session * session);
TRANSCRIBE_API int transcribe_stream_revision(const struct transcribe_session * session);
TRANSCRIBE_API int transcribe_stream_n_committed_segments(const struct transcribe_session * session);
TRANSCRIBE_API int transcribe_stream_n_committed_words(const struct transcribe_session * session);
TRANSCRIBE_API int transcribe_stream_n_committed_tokens(const struct transcribe_session * session);
TRANSCRIBE_API transcribe_status transcribe_stream_last_status(const struct transcribe_session * session);
TRANSCRIBE_API int transcribe_tokenize(const struct transcribe_model * model,
                                       const char *                    text,
                                       int32_t *                       tokens,
                                       size_t                          n_max);
struct transcribe_timings {
    uint64_t struct_size;
    float    load_ms;
    float    mel_ms;
    float    encode_ms;
    float    decode_ms;
};