bindings/rust/sys/src/transcribe_sys.rs

unsafe extern "C" {
    pub fn transcribe_close(session: *mut transcribe_session);
}
unsafe extern "C" {
    pub fn transcribe_get_model(session: *const transcribe_session) -> *const transcribe_model;
}
unsafe extern "C" {
    pub fn transcribe_run(
        session: *mut transcribe_session,
        pcm: *const f32,
        n_samples: ::std::os::raw::c_int,
        params: *const transcribe_run_params,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_run_batch(
        session: *mut transcribe_session,
        pcm: *const *const f32,
        n_samples: *const ::std::os::raw::c_int,
        n: ::std::os::raw::c_int,
        params: *const transcribe_run_params,
    ) -> transcribe_status;
}
pub type transcribe_abort_callback =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void) -> bool>;
unsafe extern "C" {
    pub fn transcribe_set_abort_callback(
        session: *mut transcribe_session,
        cb: transcribe_abort_callback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn transcribe_was_aborted(session: *const transcribe_session) -> bool;
}
unsafe extern "C" {
    pub fn transcribe_was_truncated(session: *const transcribe_session) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_session_limits {
    pub struct_size: u64,
    pub effective_n_ctx: i32,
    pub effective_max_audio_ms: i64,
    pub max_kv_bytes: i64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_session_limits"]
        [::std::mem::size_of::<transcribe_session_limits>() - 32usize];
    ["Alignment of transcribe_session_limits"]
        [::std::mem::align_of::<transcribe_session_limits>() - 8usize];
    ["Offset of field: transcribe_session_limits::struct_size"]
        [::std::mem::offset_of!(transcribe_session_limits, struct_size) - 0usize];
    ["Offset of field: transcribe_session_limits::effective_n_ctx"]
        [::std::mem::offset_of!(transcribe_session_limits, effective_n_ctx) - 8usize];
    ["Offset of field: transcribe_session_limits::effective_max_audio_ms"]
        [::std::mem::offset_of!(transcribe_session_limits, effective_max_audio_ms) - 16usize];
    ["Offset of field: transcribe_session_limits::max_kv_bytes"]
        [::std::mem::offset_of!(transcribe_session_limits, max_kv_bytes) - 24usize];
};
unsafe extern "C" {
    pub fn transcribe_session_limits_init(out: *mut transcribe_session_limits);
}
unsafe extern "C" {
    pub fn transcribe_session_get_limits(
        session: *const transcribe_session,
        out: *mut transcribe_session_limits,
    ) -> transcribe_status;
}
impl transcribe_stream_state {
    pub const TRANSCRIBE_STREAM_IDLE: transcribe_stream_state = transcribe_stream_state(0);
    pub const TRANSCRIBE_STREAM_ACTIVE: transcribe_stream_state = transcribe_stream_state(1);
    pub const TRANSCRIBE_STREAM_FINISHED: transcribe_stream_state = transcribe_stream_state(2);
    pub const TRANSCRIBE_STREAM_FAILED: transcribe_stream_state = transcribe_stream_state(3);
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct transcribe_stream_state(pub ::std::os::raw::c_uint);
impl transcribe_stream_commit_policy {
    pub const TRANSCRIBE_STREAM_COMMIT_AUTO: transcribe_stream_commit_policy =
        transcribe_stream_commit_policy(0);
    pub const TRANSCRIBE_STREAM_COMMIT_ON_FINALIZE: transcribe_stream_commit_policy =
        transcribe_stream_commit_policy(1);
    pub const TRANSCRIBE_STREAM_COMMIT_STABLE_PREFIX: transcribe_stream_commit_policy =
        transcribe_stream_commit_policy(2);
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct transcribe_stream_commit_policy(pub ::std::os::raw::c_uint);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_stream_params {
    pub struct_size: u64,
    pub family: *const transcribe_ext,
    pub commit_policy: transcribe_stream_commit_policy,
    pub stable_prefix_agreement_n: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_stream_params"]
        [::std::mem::size_of::<transcribe_stream_params>() - 24usize];
    ["Alignment of transcribe_stream_params"]
        [::std::mem::align_of::<transcribe_stream_params>() - 8usize];
    ["Offset of field: transcribe_stream_params::struct_size"]
        [::std::mem::offset_of!(transcribe_stream_params, struct_size) - 0usize];
    ["Offset of field: transcribe_stream_params::family"]
        [::std::mem::offset_of!(transcribe_stream_params, family) - 8usize];
    ["Offset of field: transcribe_stream_params::commit_policy"]
        [::std::mem::offset_of!(transcribe_stream_params, commit_policy) - 16usize];
    ["Offset of field: transcribe_stream_params::stable_prefix_agreement_n"]
        [::std::mem::offset_of!(transcribe_stream_params, stable_prefix_agreement_n) - 20usize];
};
unsafe extern "C" {
    pub fn transcribe_stream_params_init(params: *mut transcribe_stream_params);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_stream_update {
    pub struct_size: u64,
    pub result_changed: bool,
    pub is_final: bool,
    pub revision: i32,
    pub input_received_ms: i64,
    pub audio_committed_ms: i64,
    pub buffered_ms: i64,
    pub committed_changed: bool,
    pub tentative_changed: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_stream_update"]
        [::std::mem::size_of::<transcribe_stream_update>() - 48usize];
    ["Alignment of transcribe_stream_update"]
        [::std::mem::align_of::<transcribe_stream_update>() - 8usize];
    ["Offset of field: transcribe_stream_update::struct_size"]
        [::std::mem::offset_of!(transcribe_stream_update, struct_size) - 0usize];
    ["Offset of field: transcribe_stream_update::result_changed"]
        [::std::mem::offset_of!(transcribe_stream_update, result_changed) - 8usize];
    ["Offset of field: transcribe_stream_update::is_final"]
        [::std::mem::offset_of!(transcribe_stream_update, is_final) - 9usize];
    ["Offset of field: transcribe_stream_update::revision"]
        [::std::mem::offset_of!(transcribe_stream_update, revision) - 12usize];
    ["Offset of field: transcribe_stream_update::input_received_ms"]
        [::std::mem::offset_of!(transcribe_stream_update, input_received_ms) - 16usize];
    ["Offset of field: transcribe_stream_update::audio_committed_ms"]
        [::std::mem::offset_of!(transcribe_stream_update, audio_committed_ms) - 24usize];
    ["Offset of field: transcribe_stream_update::buffered_ms"]
        [::std::mem::offset_of!(transcribe_stream_update, buffered_ms) - 32usize];
    ["Offset of field: transcribe_stream_update::committed_changed"]
        [::std::mem::offset_of!(transcribe_stream_update, committed_changed) - 40usize];
    ["Offset of field: transcribe_stream_update::tentative_changed"]
        [::std::mem::offset_of!(transcribe_stream_update, tentative_changed) - 41usize];
};
unsafe extern "C" {
    pub fn transcribe_stream_update_init(out: *mut transcribe_stream_update);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_stream_text {
    pub struct_size: u64,
    pub full_text: *const ::std::os::raw::c_char,
    pub full_text_bytes: u64,
    pub committed_text: *const ::std::os::raw::c_char,
    pub committed_text_bytes: u64,
    pub tentative_text: *const ::std::os::raw::c_char,
    pub tentative_text_bytes: u64,
    pub raw_tentative_start_bytes: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_stream_text"][::std::mem::size_of::<transcribe_stream_text>() - 64usize];
    ["Alignment of transcribe_stream_text"]
        [::std::mem::align_of::<transcribe_stream_text>() - 8usize];
    ["Offset of field: transcribe_stream_text::struct_size"]
        [::std::mem::offset_of!(transcribe_stream_text, struct_size) - 0usize];
    ["Offset of field: transcribe_stream_text::full_text"]
        [::std::mem::offset_of!(transcribe_stream_text, full_text) - 8usize];
    ["Offset of field: transcribe_stream_text::full_text_bytes"]
        [::std::mem::offset_of!(transcribe_stream_text, full_text_bytes) - 16usize];
    ["Offset of field: transcribe_stream_text::committed_text"]
        [::std::mem::offset_of!(transcribe_stream_text, committed_text) - 24usize];
    ["Offset of field: transcribe_stream_text::committed_text_bytes"]
        [::std::mem::offset_of!(transcribe_stream_text, committed_text_bytes) - 32usize];
    ["Offset of field: transcribe_stream_text::tentative_text"]
        [::std::mem::offset_of!(transcribe_stream_text, tentative_text) - 40usize];
    ["Offset of field: transcribe_stream_text::tentative_text_bytes"]
        [::std::mem::offset_of!(transcribe_stream_text, tentative_text_bytes) - 48usize];
    ["Offset of field: transcribe_stream_text::raw_tentative_start_bytes"]
        [::std::mem::offset_of!(transcribe_stream_text, raw_tentative_start_bytes) - 56usize];
};
unsafe extern "C" {
    pub fn transcribe_stream_text_init(out: *mut transcribe_stream_text);
}
unsafe extern "C" {
    pub fn transcribe_stream_get_text(
        session: *const transcribe_session,
        out: *mut transcribe_stream_text,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_stream_begin(
        session: *mut transcribe_session,
        run_params: *const transcribe_run_params,
        stream_params: *const transcribe_stream_params,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_stream_feed(
        session: *mut transcribe_session,
        pcm: *const f32,
        n_samples: ::std::os::raw::c_int,
        update: *mut transcribe_stream_update,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_stream_finalize(
        session: *mut transcribe_session,
        update: *mut transcribe_stream_update,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_stream_reset(session: *mut transcribe_session);
}
unsafe extern "C" {
    pub fn transcribe_stream_get_state(
        session: *const transcribe_session,
    ) -> transcribe_stream_state;
}
unsafe extern "C" {
    pub fn transcribe_stream_revision(session: *const transcribe_session) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_stream_n_committed_segments(
        session: *const transcribe_session,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_stream_n_committed_words(
        session: *const transcribe_session,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_stream_n_committed_tokens(
        session: *const transcribe_session,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn transcribe_stream_last_status(session: *const transcribe_session) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_tokenize(
        model: *const transcribe_model,
        text: *const ::std::os::raw::c_char,
        tokens: *mut i32,
        n_max: usize,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_timings {
    pub struct_size: u64,
    pub load_ms: f32,
    pub mel_ms: f32,
    pub encode_ms: f32,
    pub decode_ms: f32,
}
